tests/invalid/wrong_type_arity.err_exp
wrong_type_arity.m:032: In declaration of predicate `q'/2:
wrong_type_arity.m:032:   error: the type [38;5;87m`t1'/0[39;49m [38;5;203mis undefined.[39;49m
wrong_type_arity.m:032:   [38;5;226m(There is a type named `t1' with arity 1.)[39;49m
wrong_type_arity.m:038: In declaration of predicate `r'/2:
wrong_type_arity.m:038:   error: the type [38;5;87m`t2'/0[39;49m [38;5;203mis undefined.[39;49m
wrong_type_arity.m:038:   [38;5;226m(There are types named `t2' with arities 1, 2 and 3.)[39;49m
